--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/_GridViewPartial_movimiento_inventario_x_aprobar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/AprobacionMovimientoInventario/_GridViewPartial_movimiento_inventario_x_aprobar.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_movimiento_inventario_x_aprobar";
-        settings.CallbackRouteValues = new { Controller = "AprobacionMovimientoInventario", Action = "GridViewPartial_movimiento_inventario_x_aprobar", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
+        settings.CallbackRouteValues = new { Controller = "AprobacionMovimientoInventario", Action = "GridViewPartial_movimiento_inventario_x_aprobar", IdSucursal = ViewBag.IdSucursal, IdBodega = ViewBag.IdBodega };
         settings.KeyFieldName = "SecuencialID";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
