--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_018.cshtml
@@ -61,7 +61,7 @@
         <div class="box-body">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdSucursal">Sucursal</label>
                             @Html.DevExpress().DropDownEditFor(q => q.IntArray, settings =>
@@ -107,7 +107,7 @@
                        }).GetHtml()
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdCliente">Cliente</label>
                             @Html.Partial("_CmbCliente_Facturacion", Model.IdCliente)
@@ -122,6 +122,15 @@
                             @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "form", @role = "text-danger" })
                         </div>
                     </div>
+
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="IdNivel">Crédito/Débito</label>
+                            @Html.DropDownListFor(q => q.CreDeb, new SelectList(ViewBag.lst_cre, "Key", "Value"), new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.CreDeb, "", new { @class = "form", @role = "text-danger" })
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="row">
@@ -181,13 +190,6 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label for="IdNivel">nota</label>
-                            @Html.DropDownListFor(q => q.CreDeb, new SelectList(ViewBag.lst_cre, "Key", "Value"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.CreDeb, "", new { @class = "form", @role = "text-danger" })
-                        </div>
-                    </div>
                 </div>
             </div>
             <!-- /.box-body -->
