--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
@@ -8,6 +8,7 @@
 
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "GuiaRemision", Action = "EditingAddNew", Area = "Facturacion" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "GuiaRemision", Action = "EditingUpdate", Area = "Facturacion" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "GuiaRemision", Action = "EditingDelete", Area = "Facturacion" };
 
@@ -21,7 +22,8 @@
         settings.CommandColumn.ShowNewButton = false;
 
         settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = true;
+        settings.CommandColumn.ShowNewButtonInHeader = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
@@ -34,32 +36,156 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-        
+
+        //Funcion para inicializar fila al presionar nuevo
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdProducto"] = 0;
+            e.NewValues["IdCod_Impuesto"] = "";
+            e.NewValues["gi_por_desc"] = "0";
+            e.NewValues["gi_cantidad"] = "1";
+        };
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "pr_descripcion";
             column.Caption = "Producto";
-            column.Width = Unit.Percentage(70);
             column.Visible = true;
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
 
         settings.Columns.Add(column =>
         {
-            column.FieldName = "gi_cantidad";
-            column.Caption = "cantidad";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.FieldName = "IdProducto";
+            column.Caption = "Producto";
             column.Width = Unit.Percentage(20);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<div id='ajaxDiv'>");
+                Html.RenderPartial("_CmbProducto_Guia", DataBinder.Eval(c.DataItem, "IdProducto"));
+                ViewContext.Writer.Write("</div>");
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_cantidad";
+            column.Caption = "Cantidad";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
             column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_precio";
+            column.Caption = "Precio";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_por_desc";
+            column.Caption = " % Descuento";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCod_Impuesto";
+            column.Caption = "Impuesto";
+            column.Width = Unit.Percentage(8);
+            column.Visible = false;
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Columns.Add("nom_impuesto", "Descripción").Width = Unit.Percentage(100);
+                p.TextField = "nom_impuesto";
+                p.ValueField = "IdCod_Impuesto";
+                p.ValueType = typeof(string);
+                p.DataSource = ViewBag.lst_impuesto;
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_PrecioFinal";
+            column.Caption = "Precio final";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_Subtotal";
+            column.Caption = "Subtotal";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_Iva";
+            column.Caption = "IVA";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "gi_Total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
+            column.Width = Unit.Percentage(8);
+            column.Visible = true;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+        });
+        settings.Columns.Add("gi_detallexItems", "Observación").Width = System.Web.UI.WebControls.Unit.Percentage(10);
 
-
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "gi_cantidad").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "gi_Total").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
