--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -772,6 +772,12 @@
             </div>
             <div class="col-md-12">
                 <div class="form-group">
+                    <label for="DatosContacto">Contacto</label>
+                    <input type="text" class="form-control" id="DatosContacto" name="DatosContacto"/>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
                     <label for="pf_observacion">Observación</label>
                     @Html.TextBoxFor(q => q.vt_Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.vt_Observacion, "", new { @class = "text-danger" })
