--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Anular.cshtml
@@ -75,7 +75,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-3">
                 <div class="form-group">
                     @Html.DevExpress().CheckBoxFor(q => q.CobroAutomatico,
                          settings =>
@@ -85,6 +85,36 @@
                              settings.Text = "Realiza cobro automático al momento de la venta";
                          }
                      ).GetHtml()
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    @Html.DevExpress().CheckBoxFor(q => q.EsElectronico,
+                         settings =>
+                         {
+                             settings.Name = "EsElectronico";
+                             settings.Checked = false;
+                             settings.Text = "Es electrónico";
+                         }
+                     ).GetHtml()
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdCaja">Tipo documento*</label>
+                    @Html.DropDownListFor(q => q.codDocumentoTipo, new SelectList(ViewBag.lst_doc, "CodDocumentoTipo", "descripcion"), new { @class = "form-control", @id = "NivelPrecio" })
+                    @Html.ValidationMessageFor(q => q.codDocumentoTipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="MotiAnula">Motivo anulación*</label>
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
