--- a/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.General.tb_sis_Documento_Tipo_Talonario_Info
+﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
     ViewBag.Title = "Talonarios";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
